# drake

bindings/pydrake/: BUILD.bazel  symbolic_py.cc
bindings/pydrake/examples/: BUILD.bazel  manipulation_station_py.cc
bindings/pydrake/geometry/: geometry_py_visualizers.cc
bindings/pydrake/manipulation/: simple_ui.py
bindings/pydrake/planning/: BUILD.bazel  planning_py.cc  planning_py.h  planning_py_collision_checker.cc  planning_py_trajectory_optimization.cc
bindings/pydrake/solvers/: solvers_py_mathematicalprogram.cc
bindings/pydrake/systems/: controllers_py.cc  jupyter_widgets.py  jupyter_widgets_examples.ipynb  meshcat_visualizer.py  sensors_py.cc
common/: symbolic_trigonometric_polynomial.cc
common/proto/: call_python.h
common/test/: symbolic_decompose_test.cc
drake/automotive/: BUILD  simple_car.cc
drake/solvers/: rotation_constraint.cc
examples/Atlas/: Atlas.m  runAtlasHandControl.m
examples/Atlas/controllers/: RobotiqControlBlock.m
examples/acrobot/: acrobot_plant.cc  acrobot_plant.h
examples/acrobot/test/: acrobot_plant_test.cc
examples/manipulation_station/: BUILD.bazel  end_effector_teleop.py  end_effector_teleop_dualshock4.py  end_effector_teleop_mouse.py  end_effector_teleop_sliders.py  joint_teleop.py  manipulation_station.cc  manipulation_station.h  manipulation_station_hardware_interface.cc  manipulation_station_hardware_interface.h  mock_station_simulation.cc  proof_of_life.cc  station_simulation.cc  station_simulation.h
examples/manipulation_station/test/: manipulation_station_test.cc  station_simulation_test.cc
geometry/: BUILD.bazel  meshcat.cc  meshcat.h  meshcat_types.h  proximity_engine.cc
geometry/benchmarking/: iris_in_configuration_space_benchmarks.cc
geometry/optimization/: BUILD.bazel  convex_set.cc  convex_set.h  graph_of_convex_sets.cc  graph_of_convex_sets.h  implicit_graph_of_convex_sets.cc  implicit_graph_of_convex_sets.h  iris.cc  iris.h  iris_internal.cc  iris_internal.h
geometry/optimization/test/: implicit_graph_of_convex_sets_test.cc  iris_in_configuration_space_test.cc  iris_test.cc  vpolytope_test.cc
geometry/proximity/: distance_to_shape_callback.h  penetration_as_point_pair_callback.cc
geometry/test/: meshcat_manual_test.cc  proximity_engine_test.cc
manipulation/util/: show_model.py
math/: rotation_matrix.cc  rotation_matrix.h
multibody/inverse_kinematics/: minimum_distance_constraint.h
multibody/parsing/: detail_mujoco_parser.cc
multibody/parsing/test/: detail_mujoco_parser_test.cc
multibody/tree/: BUILD.bazel
multibody/tree/test/: geometry_spatial_inertia_test.cc
perception/: point_cloud.cc
planning/: BUILD.bazel  birrt_planner.cc  birrt_planner.h  default_state_types.cc  default_state_types.h  holonomic_kinematic_planning_space.cc  holonomic_kinematic_planning_space.h  iris_regions_from_clique_cover.cc  joint_limits.cc  joint_limits.h  make_planning_robot.cc  mbp_environment_collision_checker.cc  mbp_environment_collision_checker.h  parallel_birrt_planner.cc  parallel_birrt_planner.h  parallel_rrt_planner_tree.h  path_planning.h  path_planning_result.cc  path_planning_result.h  path_processor.cc  path_processor.h  per_thread_random_source.cc  planning_space.cc  planning_space.h  roadmap_with_packed_edge_spheres.cc  roadmap_with_packed_edge_spheres.h  rrt_planner.cc  rrt_planner.h  rrt_planners.h  sampling_based_planners.h  sphere_robot_model_collision_checker.cc  sphere_robot_model_collision_checker.h  state_sampler.h  symmetric_planning_space.cc  symmetric_planning_space.h  valid_starts.h  valid_starts_and_goals.h  voxel_self_filter.cc  voxel_self_filter.h  voxelized_environment_builder.cc  (+2 more)
planning/test/: iris_regions_from_clique_cover_test.cc
planning/trajectory_optimization/: BUILD.bazel  direct_collocation.cc  direct_collocation.h  fast_path_planner.cc  fast_path_planner.h  gcs_trajectory_optimization.h  hybrid_multibody_collocation.cc  hybrid_multibody_collocation.h  multiple_shooting.h
planning/trajectory_optimization/test/: fast_path_planner_test.cc  hybrid_multibody_collocation_test.cc
solvers/: BUILD.bazel  constraint.h  cost.cc  gurobi_solver.h  ibex_solver.cc  mathematical_program.cc  minimum_value_constraint.cc
solvers/test/: gurobi_solver_license_retention_test.py  minimum_value_constraint_test.cc
systems/analysis/: BUILD.bazel  region_of_attraction.cc  region_of_attraction.h
systems/analysis/test/: region_of_attraction_test.cc
systems/benchmarking/: multilayer_perceptron_benchmark.cc
systems/controllers/: BUILD.bazel  QPCommon.cpp  QPCommon.h  constructQPDataPointerMex.cpp  continuous_value_iteration.cc  continuous_value_iteration.h  continuous_value_iteration_options.h  finite_horizon_linear_quadratic_regulator.cc  instantaneousQPControllermex.cpp  neural_value_iteration.cc  neural_value_iteration.h  neural_value_iteration_options.h
systems/controllers/test/: continuous_value_iteration_test.cc  neural_value_iteration_test.cc
systems/framework/: leaf_system.cc  leaf_system.h
systems/plants/: CMakeLists.txt  RigidBodyManipulator.cpp  TimeSteppingRigidBodyManipulator.m
systems/plants/@RigidBodyManipulator/: RigidBodyManipulator.m
systems/primitives/: BUILD.bazel  bias.cc  bias.h  multilayer_perceptron.cc  multilayer_perceptron.h
systems/primitives/test/: multilayer_perceptron_test.cc
systems/sensors/: BUILD.bazel  image.h  image_to_lcm_image_array_t.cc  image_to_lcm_image_array_t.h  lcm_image_array_receive_example.cc  lcm_image_array_to_images.cc  lcm_image_array_to_images.h
systems/sensors/visualization/: BUILD.bazel  sensors_visualization.cc  sensors_visualization.h
tools/install/libdrake/: BUILD.bazel
tools/skylark/: pybind.bzl
tools/workspace/: BUILD.bazel  default.bzl
tools/workspace/common_robotics_utilities/: repository.bzl
tools/workspace/ibex/: package.BUILD.bazel
tools/workspace/models_robotlocomotion/: package.BUILD.bazel  repository.bzl
tools/workspace/mujoco_menagerie_internal/: files.bzl  (+1 more)
tutorials/: BUILD.bazel  iris_builder.ipynb  rendering_multibody_plant.ipynb
util/: drakeUtil.cpp  drakeUtil.h
(+4 files in other folders)
