# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "manipulation_station",
    srcs = [
        "manipulation_station.cc",
    ],
    hdrs = [
        "manipulation_station.h",
    ],
    data = [
        "//examples/kuka_iiwa_arm:models",
        "//manipulation/models/iiwa_description:models",
        "//manipulation/models/wsg_50_description:models",
        "@models_robotlocomotion//:models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:find_resource",
        "//geometry:scene_graph",
        "//manipulation/schunk_wsg:schunk_wsg_position_controller",
        "//math:geometric_transform",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/framework",
    ],
)

drake_cc_library(
    name = "manipulation_station_hardware_interface",
    srcs = [
        "manipulation_station_hardware_interface.cc",
    ],
    hdrs = [
        "manipulation_station_hardware_interface.h",
    ],
    deps = [
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//lcm",
        "//systems/framework",
        "//systems/lcm",
    ],
)

drake_cc_binary(
    name = "proof_of_life",
    srcs = [
        "proof_of_life.cc",
    ],
    add_test_rule = 1,
    test_rule_args = ["--target_realtime_rate=0.0 --duration=0.5"],
    test_rule_timeout = "moderate",
    deps = [
        ":manipulation_station",
        "//geometry:geometry_visualization",
        "//systems/analysis:simulator",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "mock_station_simulation",
    srcs = [
        "mock_station_simulation.cc",
    ],
    add_test_rule = 1,
    test_rule_args = ["--target_realtime_rate=0.0 --duration=0.5"],
    deps = [
        ":manipulation_station",
        "//examples/kuka_iiwa_arm:iiwa_lcm",
        "//geometry:geometry_visualization",
        "//lcm",
        "//systems/analysis:simulator",
        "//systems/lcm",
        "@gflags",
    ],
)

# Tests

drake_cc_googletest(
    name = "manipulation_station_test",
    deps = [
        ":manipulation_station",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

# Python examples

load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
)

drake_py_binary(
    name = "joint_teleop",
    srcs = ["joint_teleop.py"],
    data = [
        "@models_robotlocomotion//:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

add_lint_tests()
