# -*- python -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses(["notice"])  # BSD-3-Clause

package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "models",
    srcs = glob(["**/*"]),
)

install(
    name = "install",
#    docs = ["LICENSE.TXT"],
    targets = [":models"],
)
